:bug: Subcategories > Fix arrow button mobile

--- a/src/components/SliderSubcategoriesMobile/style.scoped.scss
+++ b/src/components/SliderSubcategoriesMobile/style.scoped.scss
@@ -1,4 +1,4 @@
-.button {
+.button-discover {
     display: block;
     pointer-events: all;
     position: absolute;
@@ -21,6 +21,7 @@
 }
 
 .slider-content {
+
     position: relative;
 
     margin-right: rem(47px, 'small');
